MVP on CommitScreen

--- a/app/src/main/res/values/view_ids.xml
+++ b/app/src/main/res/values/view_ids.xml
@@ -16,4 +16,9 @@
     <!-- repositories items -->
     <item name="repositoryName" type="id"/>
     <item name="repositoryLanguage" type="id"/>
+
+    <!-- commits items -->
+    <item name="commitAutor" type="id"/>
+    <item name="commitMessage" type="id"/>
+
 </resources>
